# TicTacToe_withJNL

./: CMakeLists.txt  TicTacToe.h  TicTakToe.cpp
src/: Main.java  TicTacToe.h  TicTacToe.java  TicTacToeTest.java  WelcomeToTheJungle.java
